--- a/index.ipynb
+++ b/index.ipynb
@@ -35,26 +35,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A=\n",
-      " [[1402  191]\n",
-      " [1371  821]\n",
-      " [ 949 1437]\n",
-      " [ 147 1448]]\n",
-      "B=\n",
-      " [[1 2 3]\n",
-      " [4 5 6]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[1402,  191],\n",
+       "       [1371,  821],\n",
+       "       [ 949, 1437],\n",
+       "       [ 147, 1448]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Code Here"
+    "# Code Here\n",
+    "import numpy as np\n",
+    "\n",
+    "A = np.array([[1402, 191], [1371, 821], [949, 1437], [147, 1448]])\n",
+    "B = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "A\n",
+    "B"
    ]
   },
   {
@@ -66,20 +71,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape of A: (4, 2)\n",
-      "Shape of B: (2, 3)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(4, 2)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Code Here"
+    "# Code Here\n",
+    "A.shape\n",
+    "#B.shape"
    ]
   },
   {
@@ -95,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +119,11 @@
     }
    ],
    "source": [
-    "# Code Here"
+    "# Code Here\n",
+    "print(A[0,0])\n",
+    "print(A[0,1])\n",
+    "print(A[2,1])\n",
+    "print(A[3,0])"
    ]
   },
   {
@@ -124,27 +137,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "before random data:\n",
-      " [[0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]]\n",
-      "\n",
-      "after random data:\n",
-      " [[2. 7. 5.]\n",
-      " [7. 9. 3.]\n",
-      " [6. 5. 9.]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0.],\n",
+       "       [0., 0., 0.],\n",
+       "       [0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Code Here (due to random data , your output might be different)"
+    "# Code Here (due to random data , your output might be different)\n",
+    "zero_array = np.array(np.zeros((3,3)))\n",
+    "zero_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3., 1., 7.],\n",
+       "       [7., 4., 6.],\n",
+       "       [6., 5., 4.]])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i in zero_array:\n",
+    "    for j in range(0, len(i)):\n",
+    "        i[j] =  np.random.randint(low=1, high=10, size=1)\n",
+    "zero_array\n"
    ]
   },
   {
@@ -159,24 +196,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final output\n",
-      "\n",
-      " [[12.  4. 13.  8.]\n",
-      " [13.  5.  9.  9.]\n",
-      " [11. 11. 11. 17.]\n",
-      " [16. 14.  8. 10.]]\n"
+      "[[0.81456314 0.49660406 0.40682367 0.79295527]\n",
+      " [0.82821038 0.80693572 0.75704053 0.0117633 ]\n",
+      " [0.20765518 0.02962297 0.2603116  0.86393245]\n",
+      " [0.23317788 0.75751321 0.70264393 0.33190068]]\n",
+      "[[0.65120178 0.1524848  0.53343591 0.93598344]\n",
+      " [0.92202773 0.34458377 0.31745762 0.96440449]\n",
+      " [0.48269346 0.25675785 0.67117963 0.00687839]\n",
+      " [0.58719714 0.52261749 0.41299885 0.70151588]]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.46576492, 0.64908887, 0.94025958, 1.72893871],\n",
+       "       [1.7502381 , 1.15151948, 1.07449815, 0.97616779],\n",
+       "       [0.69034864, 0.28638082, 0.93149124, 0.87081083],\n",
+       "       [0.82037502, 1.2801307 , 1.11564277, 1.03341656]])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Code Here (due to random data , your output might be different)"
+    "# Code Here (due to random data , your output might be different)\n",
+    "a_mat = np.random.rand(4,4)\n",
+    "print(a_mat)\n",
+    "b_mat = np.random.rand(4,4)\n",
+    "print(b_mat)\n",
+    "\n",
+    "c_mat = a_mat + b_mat\n",
+    "c_mat"
    ]
   },
   {
@@ -205,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
